nobase_pkginclude_HEADERS = \
	LuaEnvironment.hpp \
	loaders.hpp \
	LuaStack.hpp \
	stack/accessible.cpp \
	stack/invocation.cpp \
	stack/reference.cpp \
	stack/userdata.cpp \
	insertion.hpp \
	LuaValue.hpp \
	LuaGlobalAccessible.hpp \
	LuaStackAccessible.hpp \
	LuaTableAccessible.hpp \
	ModuleLoader.hpp \
	DirectoryModuleLoader.hpp \
	QObjectObserver.hpp \
	QObjectSlot.hpp \
	types.hpp \
	table.hpp \
	LuaUserdata.hpp \
	userdata.hpp \
	LuaIndex.hpp \
	LuaException.hpp
