nobase_pkginclude_HEADERS = \
	LuaEnvironment.hpp \
	loaders.hpp \
	LuaStack.hpp \
	stack/invocation.cpp \
	stack/userdata.cpp \
	type/QVariant.hpp \
	type/QString.hpp \
	type/QChar.hpp \
	insertion.hpp \
	LuaValue.hpp \
	LuaGlobalAccessible.hpp \
	LuaStackAccessible.hpp \
	LuaTableAccessible.hpp \
	values.hpp \
	ModuleLoader.hpp \
	DirectoryModuleLoader.hpp \
	QObjectObserver.hpp \
	QObjectSlot.hpp \
	types.hpp \
	table.hpp \
	LuaUserdata.hpp \
	qobject.hpp \
	LuaIndex.hpp \
	LuaException.hpp
