nobase_include_HEADERS = \
	luacxx/algorithm.hpp \
	luacxx/log.hpp \
	luacxx/stack.hpp \
	luacxx/enum.hpp \
	luacxx/link.hpp \
	luacxx/index.hpp \
	luacxx/error.hpp \
	luacxx/global.hpp \
	luacxx/load.hpp \
	luacxx/range.hpp \
	luacxx/reference.hpp \
	luacxx/thread.hpp \
	luacxx/type.hpp \
	luacxx/value.hpp \
	luacxx/convert/callable.hpp \
	luacxx/convert/char.hpp \
	luacxx/convert/char_p.hpp \
	luacxx/convert/const_char_p.hpp \
	luacxx/convert/numeric.hpp \
	luacxx/convert/shared_ptr.hpp \
	luacxx/convert/string.hpp \
	luacxx/convert/vector.hpp \
	luacxx/convert/void.hpp \
	luacxx/std/vector.hpp
