lib_LTLIBRARIES = libluacxx.la
libluacxx_la_CXXFLAGS = -std=c++0x @QT_CXXFLAGS@
libluacxx_la_LIBADD = @QT_LIBS@
libluacxx_la_SOURCES = \
	loaders.hpp \
	Lua.hpp \
	LuaStack.hpp \
	LuaValue.hpp \
	LuaGlobal.hpp \
	LuaReference.hpp \
	types.hpp \
	LuaException.hpp \
	loaders.cpp \
	Lua.cpp \
	LuaStack.cpp \
	LuaValue.cpp \
	types.cpp
