lib_LTLIBRARIES = libluacxx.la
libluacxx_la_CXXFLAGS = @QT_CXXFLAGS@ @LUA_INCLUDE@
libluacxx_la_LIBADD = @QT_LIBS@ @LUA_LIB@
libluacxx_la_SOURCES = \
	loaders.hpp \
	Lua.hpp \
	LuaStack.hpp \
	LuaValue.hpp \
	LuaGlobal.hpp \
	LuaReference.hpp \
	types.hpp \
	LuaException.hpp \
	loaders.cpp \
	Lua.cpp \
	LuaStack.cpp \
	LuaValue.cpp \
	types.cpp

pkginclude_HEADERS = \
	loaders.hpp \
	Lua.hpp \
	LuaStack.hpp \
	LuaValue.hpp \
	LuaGlobal.hpp \
	LuaReference.hpp \
	types.hpp \
	LuaException.hpp
